# takkenbende

./: .gitignore  CMakeLists.txt  Form1.Designer.cs  Form1.cs  Form1.resx  ObjBuilder.cs  node.cs
Properties/: Resources.Designer.cs  Settings.Designer.cs
plot/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  node.cs  plot.csproj  plot.sln
plot/Properties/: AssemblyInfo.cs
